--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "author": "Dulshan Siriwardhana",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
     "puppeteer": "^22.10.0"
   }
 }
