--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "author": "Dulshan Siriwardhana",
   "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "chrome-aws-lambda": "^6",
-    "puppeteer-core": "^6"
+  "engines": {
+    "node": "^14"
   },
-  "devDependencies": {
-    "puppeteer": "^22.10.0"
+  "dependencies": {
+    "chrome-aws-lambda": "^6",
+    "express": "^4.18.1",
+    "puppeteer": "^22.10.1",
+    "puppeteer-core": "^6"
   }
 }
