--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chrome-aws-lambda": "^6",
+    "dotenv": "^16.4.5",
     "express": "^4.18.1",
     "puppeteer": "^22.10.1",
     "puppeteer-core": "^6"
