--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "chrome-aws-lambda": "^6",
     "dotenv": "^16.4.5",
     "express": "^4.18.1",
-    "puppeteer": "^22.10.1",
-    "puppeteer-core": "^6"
+    "puppeteer-core": "^6.0.0"
+  },
+  "devDependencies": {
+    "puppeteer": "^22.10.1"
   }
 }
