--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "author": "Dulshan Siriwardhana",
   "license": "ISC",
+  "engines": {
+    "node": "^14"
+  },
   "dependencies": {
     "chrome-aws-lambda": "^6",
-    "dotenv": "^16.4.5",
     "express": "^4.18.1",
-    "puppeteer-core": "^6.0.0"
+    "puppeteer-core": "^6"
   },
   "devDependencies": {
-    "puppeteer": "^22.10.1"
+    "puppeteer": "^16.2.0"
   }
 }
