--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Dulshan Siriwardhana",
   "license": "ISC",
   "engines": {
-    "node": "^14"
+    "node": "20.x"
   },
   "dependencies": {
     "chrome-aws-lambda": "^6",
